Tritao: Dev Links refactored and improved the templates usage.